--- a/TCSPC-simulation/interim_report.ipynb
+++ b/TCSPC-simulation/interim_report.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Monte Carlo method\n",
+    "### Monte-Carlo method\n",
     "\n",
     "Draw `n_photon` random variables (time) from a mono exponential probability density function(pdf)\n",
     "$$f(t) = 1/\\tau \\cdot \\exp{(-t/\\tau)}$$\n",
